начинаем базовую стилизацию личного проекта
Плюс - добаил раздул Сервисы на главную страницу

--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML Academy: Техномарт</title>
+		<link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header">
@@ -22,7 +25,7 @@
 				<div class="contacts">
 					<p><span class="telephone">+7 (812) 555-05-55</span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 				</div>
-				<div class="user-navigation">
+				<div class="user-navigation-personal">
 					<a class="user-navigation-name" href="#" aria-label="имя пользователя">Равшан Джамшутович</a>       
 					<a class="user-navigation-output" href="#" aria-label="выход"></a> 
 					<ul class="user-navigation-list">
@@ -43,7 +46,7 @@
 				</ul>
 			</nav>
 		</header>
-		<main>
+		<main class="choice">
 			<ul class="breadcrumbs">
 				<li><a href="index.html" aria-label="главная страница"></a></li>
 				<li><a href="catalog.html">Каталог</a></li>
@@ -105,7 +108,7 @@
 				<ul class="catalog-list">
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
-						<img src="img\item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 3000">
+						<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 3000">
 						<p class="catalog-item-price">
 							<del>22500 Р.</del>
 							<a class="catalog-item-bиtton" href="#">15500 Р.</a>
@@ -113,7 +116,7 @@
 					</li>
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-						<img src="img\item2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 6000">
+						<img src="img/item2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 6000">
 						<p class="catalog-item-price">
 							<del>30500 Р.</del>
 							<a class="catalog-item-bиtton" href="#">25500 Р.</a>
@@ -121,7 +124,7 @@
 					</li>
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-						<img src="img\item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000"> 
+						<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000"> 
 						<p class="catalog-item-price">
 							<span class="old-price"></span>
 							<a class="catalog-item-bиtton" href="#">12500 Р.</a>
@@ -129,7 +132,7 @@
 					</li>
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
-						<img src="img\item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 3000">
+						<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 3000">
 						<p class="catalog-item-price">
 							<del>22500 Р.</del>
 							<a class="catalog-item-bиtton" href="#">15500 Р.</a>
@@ -137,7 +140,7 @@
 					</li>
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-						<img src="img\item2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 6000">
+						<img src="img/item2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 6000">
 						<p class="catalog-item-price">
 							<del>30500 Р.</del>
 							<a class="catalog-item-bиtton" href="#">25500 Р.</a>
@@ -145,7 +148,7 @@
 					</li>
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-						<img src="img\item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000"> 
+						<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000"> 
 						<p class="catalog-item-price">
 							<span class="old-price"></span>
 							<a class="catalog-item-bиtton" href="#">12500 Р.</a>
@@ -153,7 +156,7 @@
 					</li>
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
-						<img src="img\item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 3000">
+						<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 3000">
 						<p class="catalog-item-price">
 							<del>22500 Р.</del>
 							<a class="catalog-item-bиtton" href="#">15500 Р.</a>
@@ -161,7 +164,7 @@
 					</li>
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-						<img src="img\item2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 6000">
+						<img src="img/item2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 6000">
 						<p class="catalog-item-price">
 							<del>30500 Р.</del>
 							<a class="catalog-item-bиtton" href="#">25500 Р.</a>
@@ -169,7 +172,7 @@
 					</li>
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-						<img src="img\item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000"> 
+						<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000"> 
 						<p class="catalog-item-price">
 							<span class="old-price"></span>
 							<a class="catalog-item-bиtton" href="#">12500 Р.</a>
@@ -191,7 +194,7 @@
 		<footer class="page-footer">
 			<div class="top-footer">
 				<div class="page-footer-contacts">
-					<img src="#" width="1" height="1" alt="Логотип Техномарт">
+					<img class="logo" src="img/logo.png" width="138" height="23" alt="Логотип Техномарт">
 					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>+7 (812) 555-05-55</p>
 				</div>
 				<ul class="bottom-navigation">
@@ -231,7 +234,7 @@
 		<div class="modal-information">
 			<h2 class="modal-information-headline">Товар добавлен в корзину!</h2>
 			<p>
-				<a class="modal-information-make" href="#">Oформить заказ</a>
+				<a class="modal-information-make button" href="#">Oформить заказ</a>
 				<button class="modal-information-continue" type="button">Продолжить покупки</button>
 			</p>
 			<button class="modal-close" type="button" aria-label="закрыть окно"></button>
