--- a/index.html
+++ b/index.html
@@ -10,27 +10,30 @@
 	<body>
 		<header class="main-header">
 			<div class="main-menu">
-				<a class="logo">
-					<img src="img/logo.png" width="109" height="19" alt="Логотип Техномарт">
-				</a>
-				<form class="search-form" action="" method="post">
-					<input type="search" name="search" placeholder="Поиск:"> 
-				</form>
-				<a class="bookmarks" href="#">Закладки</a>
-				<a class="basket" href="#">Корзина</a>
-				<a class="order" href="#">Оформить заказ</a>
+				<div class="main-menu-wrapper container">
+					<a class="logo">
+						<img src="img/logo.png" width="109" height="19" alt="Логотип Техномарт">
+					</a>
+					<form class="search-form" action="" method="post">
+						<input type="search" name="search" placeholder="Поиск:"> 
+					</form>
+					<a class="bookmarks" href="#">Закладки</a>
+					<a class="basket" href="#">Корзина</a>
+					<a class="order" href="#">Оформить заказ</a>
+				</div>
 			</div>
-			<div class="header-center">
+			<div class="header-center container">
 				<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>  
 				<div class="contacts">
-					<p><span class="telephone">+7 (812) 555-05-55</span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+					<p class="telephone">+7 (812) 555-05-55</p>
+					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 				</div>
 				<ul class="user-navigation" aria-label="Меню входа пользователя	">
 					<li><a class="come-in" href="#">Войти</a></li>
 					<li><a class="check-in" href="#">Регистрация</a></li>
 				</ul>
 			</div>
-			<nav class="site-navigation">
+			<nav class="site-navigation container">
 				<ul class="top-navigation">
 					<li><a href="#">Главная</a></li>
 					<li><a href="#">Компания</a></li>
@@ -53,25 +56,28 @@
 				
 			</section>
 			<section class="services">
-				<h2>Сервисы</h2>
-				<p>Хороший интернет-магазин отличается от плохого не только ценами!<br>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-				<ul class="services-list">
-					<li class="services-item-current"><a href="#">Доставка</a></li>
-					<li class="services-item"><a href="#">Гарантия</a></li>
-					<li class="services-item"><a href="#">Кредит</a></li>
-				</ul>
-				<div class="service-delivery">
-					<h3>Доставка</h3>
-					<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
-					<img class="service-picture" src="img/delivery.png" width="468" height="261" alt="Картинка">
+				<div class="container clearfix">
+					<h2>Сервисы</h2>
+					<p>Хороший интернет-магазин отличается от плохого не только ценами!<br>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+					<div class="services-wrapper">
+						<ul class="services-list">
+							<li class="services-item-current"><a href="#">Доставка</a></li>
+							<li class="services-item"><a href="#">Гарантия</a></li>
+							<li class="services-item"><a href="#">Кредит</a></li>
+						</ul>
+						<div class="service-delivery">
+							<h3>Доставка</h3>
+							<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!</p>
+						</div>
+					</div>
 				</div>
 			</section>
-			<section class="information">
-				<h2 class="visually-hidden">Информация о компании</h2>
+			<section class="information container">
+				<!-- <h2 class="visually-hidden">Информация о компании</h2> -->
 				<div class="company">
 					<h3>Компания «Техномарт»</h3>
 					<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-					<p>Мы можем доставить ваш товар в самые отдаленные точки России!
+					<p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
 					Техномарт работает со многими транспортными компаниями: </p>
 					<ul class="transport-companies-list">
 						<li class="transport-companies-item">Деловые линии</li>
@@ -92,65 +98,71 @@
 			</section>
 		</main> 
 		<footer class="page-footer">
-			<div class="top-footer">
+			<div class="top-footer container">
 				<div class="page-footer-contacts">
-					<img class="logo" src="img/logo.png" width="138" height="23" alt="Логотип Техномарт">
+					<img class="bottom-logo" src="img/logo.png" width="138" height="23" alt="Логотип Техномарт">
 					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>+7 (812) 555-05-55</p>
 				</div>
-				<ul class="bottom-navigation">
-					<li><a href="#">Компания</a></li>
-					<li><a href="#">Новости</a></li>
-					<li><a href="catalog.html">Каталог</a></li>
-					<li><a href="#">Доставка</a></li>
-					<li><a href="#">Контакты</a></li>
-				</ul>
-				<ul class="products">
-					<li><a href="#">Материалы</a></li>
-					<li><a href="#">Техника</a></li>
-					<li><a href="#">Инструмент</a></li>
-					<li><a href="#">Спецпредложения</a></li>
-				</ul>
+				<div class="top-footer-wrapper">
+					<ul class="bottom-navigation-list">
+						<li><a href="#">Компания</a></li>
+						<li><a href="#">Новости</a></li>
+						<li><a href="catalog.html">Каталог</a></li>
+						<li><a href="#">Доставка</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>
+					<ul class="products-list">
+						<li><a href="#">Материалы</a></li>
+						<li><a href="#">Техника</a></li>
+						<li><a href="#">Инструмент</a></li>
+						<li><a href="#">Спецпредложения</a></li>
+					</ul>
+				</div>
 			</div>
 			<div class="bottom-footer">
-				<p class="copyright">© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
-				<div class="social">
-					<ul class="social-list">
-						<li><a class="social-button" href="#">Вконтакте</a></li>
-						<li><a class="social-button" href="#">Фейсбук</a></li>
-						<li><a class="social-button" href="#">Инстаграм</a></li>
-					</ul>
-				</div>   
-				<div class="developer">
-					<p>Обратная связь:
-						<a href="#">mail@htmlacademy.ru</a>
-					</p>
-					<p>Разработано —
-						<a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-					</p>	  
+				<div class="bottom-footer-wrapper container">
+					<p class="copyright">© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+					<div class="social">
+						<ul class="social-list">
+							<li><a class="social-button" href="#">Вконтакте</a></li>
+							<li><a class="social-button" href="#">Фейсбук</a></li>
+							<li><a class="social-button" href="#">Инстаграм</a></li>
+						</ul>
+					</div>   
+					<div class="developer">
+						<p>Обратная связь:<br>
+							<a href="#">mail@htmlacademy.ru</a>
+						</p>
+						<p>Разработано —<br>
+							<a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+						</p>	  
+					</div>
 				</div>
 			</div>
 		</footer>
 		
 		<section class="modal-letter">
-			<h2 class="visually-hidden">Напишите нам</h2>
-			<form class="modal-letter-form" action="" method="post">
-				<div class="user-name-field">
-					<label for="user-name">Ваше имя:</label>
-					<input id="user-name" type="text" name="user-name" placeholder="Имя Фамилия">
-				</div>
-				<div class="user-mail-field">
-					<label for="user-mail">Ваш e-mail:</label>
-					<input id="user-mail" type="text" name="user-mail" placeholder="email@example.com">
+			<button class="modal-close" type="button" aria-label="закрыть окно"></button>
+			<!-- <h2 class="visually-hidden">Напишите нам</h2> -->
+			<form class="modal-letter-form container-modal" action="" method="post">
+				<div class="modal-letter-wrapper">
+					<div class="user-name-field">
+						<label for="user-name">Ваше имя:</label>
+						<input id="user-name" type="text" name="user-name" placeholder="Имя Фамилия">
+					</div>
+					<div class="user-mail-field">
+						<label for="user-mail">Ваш e-mail:</label>
+						<input id="user-mail" type="text" name="user-mail" placeholder="email@example.com">
+					</div>
 				</div>
 				<div class="letter-field">
 					<label for="text-letter">Текст письма:</label> 
-					<textarea id="text-letter" rows="10" cols="30" name="text-letter">В свободной форме</textarea>
+					<textarea id="text-letter" rows="10" cols="51" name="text-letter">В свободной форме</textarea>
 				</div>
 				<div class="tu-send">
 					<button class="button" type="submit">Отправить</button>
 				</div>
 			</form>
-			<button class="modal-close" type="button" aria-label="закрыть окно"></button>
 		</section>
 		
 		<div class="modal-map">
